# internal/user/endpoint/restapi/handler.go
@@ -11,6 +11,7 @@ import (
 	"github.com/a-aslani/golang_message_brokers/internal/user/service"
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"net/http"
 	"time"
 )
@@ -50,7 +51,9 @@ func NewHandler(appData framework.ApplicationData, log logger.Logger, jwtToken t
 		MaxAge:          12 * time.Hour,
 	}))
 
-	v1 := router.Group("/v1")
+	prefixGroupName := router.Group("/user")
+
+	v1 := prefixGroupName.Group("/v1")
 	{
 		v1.POST("/register", h.Register)
 	}
@@ -66,19 +69,37 @@ func NewHandler(appData framework.ApplicationData, log logger.Logger, jwtToken t
 // @Accept       json
 // @Produce      json
 // @Param        request body RegisterRequest true "body params"
-// @Router       /v1/register [post]
+// @Router       /user/v1/register [post]
 func (h *handler) Register(c *gin.Context) {
 	traceID := util.GenerateID(16)
 	ctx := logger.SetTraceID(context.Background(), traceID)
 
-	err := h.userService.Register(ctx, "my name", "my lastname", "email@domain.com", "123456")
-	if err != nil {
+	var jsonReq RegisterRequest
+
+	if err := c.ShouldBindJSON(&jsonReq); err == nil {
+		validate := validator.New()
+		if err = validate.Struct(&jsonReq); err != nil {
+			h.log.Error(ctx, err.Error())
+			c.JSON(http.StatusBadRequest, payload.NewErrorResponse(err, traceID))
+			return
+		}
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(&jsonReq); err != nil {
 		h.log.Error(ctx, err.Error())
 		c.JSON(http.StatusBadRequest, payload.NewErrorResponse(err, traceID))
 		return
 	}
 
-	c.JSON(http.StatusOK, payload.NewSuccessResponse(map[string]interface{}{
-		"message": "ok",
+	err := h.userService.Register(ctx, jsonReq.FirstName, jsonReq.LastName, jsonReq.Email, jsonReq.Password)
+	if err != nil {
+		h.log.Error(ctx, err.Error())
+		c.JSON(http.StatusInternalServerError, payload.NewErrorResponse(err, traceID))
+		return
+	}
+
+	c.JSON(http.StatusOK, payload.NewSuccessResponse(gin.H{
+		"message": "register successfully!",
 	}, traceID))
 }
